--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
@@ -15,8 +14,48 @@
     <article>
 
     </article>
-    <article>
-
+    <article class="presentacionIntegrantes">
+        <h2 class="tituloSc4">Presentación de integrantes</h2>
+        <section>
+            <img src="img/alfonsoJarabaFoto.jpeg" alt="Foto de Alnfonso Jaraba" class="foto">
+            <hr>
+            <p>Nombre: Alfonso Jaraba Casas</p>
+            <p>Edad: 25 años</p>
+            <p>En mí tiempo libre me gusta montar a caballo y tambíen jugar video juegos.</p>
+            <p>He estudiado un técnico en sistemas y un tecnólogo en desarrollo de software e información, en la actualidad estoy estudiando Ingeniería de sistemas y voy en 7 semestre además soy estudiante de la UTP en el programa MinTIC.</p>
+        </section> 
+        <section>
+            <img src="img/jennyForeroFoto.jpeg" alt="Foto de Jenny Forero" class="foto">
+            <hr>
+            <p>Nombre: Jenny Johanna Forero Ávila</p>
+            <p>Edad: 31 años</p>
+            <p>Las actividades que me gustan realizar en mi tiempo libre es modificar prendas, dieñar publicidad y tambíen jugar video juegos.</p>
+            <p>Tengo conocimientos básicos en Big data, blockchain en un nivel intermedio,marketing internacional, inteligencia emocional y en el momento estoy estudiando en la UTP con el programa MinTIC</p>
+        </section>
+        <section>
+            <img src="img/juanCamiloFoto.jpeg" alt="Foto de Juan Camilo" class="foto">
+            <hr>
+            <p>Nombre: Juan Camilo Gómez Álvarez</p>
+            <p>Edad: 28 años</p>
+            <p>En mi tiempo libre me gusta aprender cosas nuevas, doy clases de matemáticas y física y tambíen me encantan los video juegos.</p>
+            <p>No tengo titulos universitarios, y en la actualidad soy estudiante en la UTP en el programa de formación MinTIC.</p>
+        </section>   
+        <section>
+            <img src="img/davidGalvezFoto.jpeg" alt="Foto de David Galvez" class="foto">
+            <hr>
+            <p>Nombre: David Gálvez Puerta</p>
+            <p>Edad: 33 años</p>
+            <p>Durante mi tiempo libre me gusta hacer deporte, practico natación y ciclismo</p>
+            <p>Realicé un tecnólogo en sistemas en la Universidad Tecnológica de Antioquia, y actualmente soy estudiante de la UTP, en el programa de formacíon MinTIC</p>
+        </section>    
+        <section>
+            <img src="img/sergioSilvaFoto.jpg" alt="Foto de Sergio Silva" class="foto">
+            <hr>
+            <p>Nombre: Sergio Duvand Silva Merchán</p>
+            <p>Edad: 16 años</p>
+            <p>En mis ratos libres me gusta estudiar y repasar temas de programación, hacer ejercicio, y ocasinalme jugar video juegos.</p>
+            <p>Realice un técnico en manipulación de alimentos, y también un curso de programación básica en Platzi, actualmente estoy estudiando un diplomado en inglés y soy estudiante en la UTP gracias al programa de formación MinTIC.</p>
+        </section>
     </article>
     <footer>
 
