--- a/index.html
+++ b/index.html
@@ -10,7 +10,63 @@
 <body>
     <header></header>
     <article>
+        <div class="divC1" style="float:left">
+            <h2  >MENÚ </h2>
+            <P>Disfruta de nuestras deliciosas preparaciones, todas basadas en la gastronimia Colombiana </P>
+            <p>deliciosos platos tipicos de nuestra cinco regiones naturales</p>
+            <h3>Region Andina</h3>
+            <p>Bandeja Paisa</p>
+            <img  class="imagen" src="images/rigion andina/bandeja-paisa.jpg" alt="Bandeja paisa">
+            <p>Changua</p>
+            <img  class="imagen" src="images/rigion andina/changua.jpg" alt="Changua">
+            <h3>Region Pacifica</h3>
+            <p>Arroz Atollado con Carne Ahumada</p>
+            <img  class="imagen" src="images/region del pacifico/arroz-atollado-de-carne-ahumada-1603.jpg" alt="Arroz atollado y carne Ahumada">
+            <p>Bocachico en Leche de Coco</p>
+            <img  class="imagen" src="images/region del pacifico/bocachico en leche de coco.jpg" alt="Bocachico en leche de coco">
+            <h3>Region Caribe</h3>
+            <p>Sancocho Costeño</p>
+            <img  class="imagen" src="images/region del caribe/sancocho-costeño.jpg" alt="Sancocho Costeño">
+            <p>Tilapia Frita y Arroz de Coco</p>
+            <img  class="imagen" src="images/region del caribe/arroz-de-coco-y-tilapia-frita.jpg" alt="Tilapia Frita y arroz de coco">
+            <h3>Region Orinoquia</h3>
+            <p>Arroz Llanero</p>
+            <img  class="imagen" src="images/region orinoquia/arroz-llanero.jpg" alt="Arroz Llanero">
+            <p>Carne a la Llanera</p>
+            <img  class="imagen" src="images/region orinoquia/CarneLlanera.jpg" alt="carne a la Llanera">
+            <H3>Region Amazonica</H3>
+            <p>Gamintana Rellena</p>
+            <img class="imagen" src="images/region del amazonas/gamintana-rellena.jpg" alt="Gamintana Rellena">
+            <p>Gamintana Asada</p>
+            <img class="imagen" src="images/region del amazonas/gamitanasada.jpg" alt="Gamintana Asada">            
+            
+        </div>
+        <div class="divC2" style="float:right">
+            <h2>COMPARTE UNA RECETA</h2>
 
+        </div>
+        <div CLASS="divC3 " style="float:right">
+            <h2>PRUEBA NUESTRAS DELICIOSAS RECETAS</h2>
+            <p>queremos comparir contigo nuestras recetas</p>
+            <p>animate a preparar estos deliciosos platos por tu cuenta</p>
+            <h3>Bandeja Paisa</h3>
+            <h4>Ingredientes</h4>
+            <p>1 1/2 cucharadas de aceite (21 g)
+                2 tallos de cebolla larga finamente picada (30 g)
+                2 tomates maduros sin piel y finamente picados (240 g)
+                1 sobre de caldo de (9 g)
+                3 tazas de agua (750 ml)
+                1/2 libra de fríjoles bola roja remojados desde la noche anterior (250 g)
+                1/4 libra de carne molida magra (125 g)
+                1/2 libra de arroz blanco cocinado (250 g)
+                1/4 de libra de tocino crocante cortado en 4 porciones (125 g)
+                4 chorizos tipo coctel previamente cocinados y dorados (120 g)
+                4 huevos fritos (200 g)
+                1 aguacate partido en 4 porciones (110 g)
+                4 arepas pequeñas redondas (80 g)
+                4 tajadas de plátano maduro fritas (80 g)</p>
+            
+        </div>
     </article>
     <article>
 
