--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header></header>
     <article>
-
+        
     </article>
     <article>
 
@@ -18,8 +18,39 @@
     <article>
 
     </article>
-    <footer>
+    <footer style="padding-bottom: 18%;">
+        <hr>
+        <div class="redes-sociales">
+            <div class="twitter">
+					<img class="twitterimg" src="https://d25dk4h1q4vl9b.cloudfront.net/bundles/front/media/images/footer/twitter.png" alt="Twitter">
+			</div>
+            <hr>
+			<div class="facebook">
+					<img class="facebook-image social-image" src="https://d25dk4h1q4vl9b.cloudfront.net/bundles/front/media/images/footer/facebook.png" alt="Facebook">
+			</div>
+        <hr>
+        </div>
 
+		<div class="legalidad">
+
+				<div class="terminos-y-condiciones">
+					<h4>Términos y Condiciones</h4>
+				</div>
+
+				<div class="footer-legals-item">
+					<h4>Política de Tratamiento de Datos Personales</h4>
+				</div>
+
+			</div>
+			<div class="footer right">
+                <h4>Designed and developed by Smartteam</h4>
+				<h4>Todos los derechos reservados – Colombian Food <span id="current-year"></span> </h4>
+				<script type="text/javascript">
+				  document.querySelector('#current-year').innerHTML = new Date().getFullYear();
+				</script>
+			</div>
+		</div>
+	</div> 
     </footer>
 </body>
 </html>
