--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header></header>
-    <article style="margin-bottom: 20px;">
+    <article >
         <div class="divC1" style="float:left">
             <h2  >MENÚ </h2>
             <P>Disfruta de nuestras deliciosas preparaciones, todas basadas en la gastronimia Colombiana </P>
