--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
     <link rel="stylesheet" href="styles.css">
     <title>Colombian Food</title>
 </head>
-<body style="background-color:#f3730b">
+<body >
     <header>
         <h1></h1>
         
     </header>
-    <article ></article>
-
      <article style="margin-bottom: 20px;">
 
         <div class="divC1" style="float:left">
             <h2  >MENÚ </h2>
             <P>Disfruta de nuestras deliciosas preparaciones, todas basadas en la gastronimia Colombiana </P>
-            <p>deliciosos platos tipicos de nuestra cinco regiones naturales</p>
+            <p>Deliciosos platos tipicos de nuestra cinco regiones naturales</p>
             <h3>Region Andina</h3>
             <p>Bandeja Paisa</p>
             <img  class="imagen" src="images/rigion andina/bandeja-paisa.jpg" alt="Bandeja paisa">
@@ -55,8 +53,8 @@
         </div>
         <div CLASS="divC3 " >
             <h2>PRUEBA NUESTRAS DELICIOSAS RECETAS</h2>
-            <p>queremos comparir contigo nuestras recetas</p>
-            <p>animate a preparar estos deliciosos platos por tu cuenta</p>  
+            <p>Queremos compartir contigo nuestras recetas.</p>
+            <p>Animate a preparar estos deliciosos platos por tu cuenta</p>  
         </div>
         </div>
 
@@ -145,7 +143,7 @@
             <p>Nombre: Juan Camilo Gómez Álvarez</p>
             <p>Edad: 28 años</p>
             <p>En mi tiempo libre me gusta aprender cosas nuevas, doy clases de matemáticas y física y tambíen me encantan los video juegos.</p>
-            <p>No tengo titulos universitarios, y en la actualidad soy estudiante en la UTP en el programa de formación MinTIC.</p>
+            <p>En la actualidad soy estudiante en la UTP en el programa de formación MinTIC.</p>
         </div>   
         <div>
             <img src="img/davidGalvezFoto.jpeg" alt="Foto de David Galvez" class="foto">
