--- a/index.html
+++ b/index.html
@@ -48,13 +48,18 @@
         <div class="divContenedor" style="float:right">
         <div class="divC2">
             <h2>COMPARTE UNA RECETA</h2>
-            <p>Compartenos tus recetas favoritas</p>
+            <br>
+            <p>Comparte tus recetas favoritas</p>
+            <br>
+            <a href="compartir.html" style="font-size: larger;">Click Aquí</a>
+        
 
         </div>
         <div CLASS="divC3 " >
             <h2>PRUEBA NUESTRAS DELICIOSAS RECETAS</h2>
             <p>Queremos compartir contigo nuestras recetas.</p>
-            <p>Animate a preparar estos deliciosos platos por tu cuenta</p>  
+            <p>Animate a preparar estos deliciosos platos por tu cuenta</p> 
+            <a href="recetasCF.html" style="font-size: larger;">Click Aquí</a> 
         </div>
         </div>
 
