commit 2 Sergio Silva

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1></h1>
         
     </header>
-     <article style="margin-bottom: 20px;">
+     <article style="margin-bottom: 20px;" id="services">
 
         <div class="divC1" style="float:left">
             <h2  >MENÚ </h2>
@@ -65,7 +65,7 @@
 
     </article>
     <!-- NOTICIAS -->
-    <div class="container">
+    <div class="container" id="news">
         <div class="row">
 
             <div class="col-12">
@@ -124,10 +124,10 @@
         </div>
     </div>
     <!-- NOTICIAS -->
-    <article class="presentacionIntegrantes">
+    <article class="team-section" id="team">
         <h2 class="tituloSc4">Presentación de integrantes</h2>
         <div >
-            <img src="img/alfonsoJarabaFoto.jpeg" alt="Foto de Alnfonso Jaraba" class="foto">
+            <img src="images/fotos_team/alfonsoJarabaFoto.jpeg" alt="Foto de Alnfonso Jaraba" class="foto">
             <hr>
             <p>Nombre: Alfonso Jaraba Casas</p>
             <p>Edad: 25 años</p>
@@ -135,7 +135,7 @@
             <p>He estudiado un técnico en sistemas y un tecnólogo en desarrollo de software e información, en la actualidad estoy estudiando Ingeniería de sistemas y voy en 7 semestre además soy estudiante de la UTP en el programa MinTIC.</p>
         </div> 
         <div>
-            <img src="img/jennyForeroFoto.jpeg" alt="Foto de Jenny Forero" class="foto">
+            <img src="images/fotos_team/jennyForeroFoto.jpeg" alt="Foto de Jenny Forero" class="foto">
             <hr>
             <p>Nombre: Jenny Johanna Forero Ávila</p>
             <p>Edad: 31 años</p>
@@ -143,7 +143,7 @@
             <p>Tengo conocimientos básicos en Big data, blockchain en un nivel intermedio,marketing internacional, inteligencia emocional y en el momento estoy estudiando en la UTP con el programa MinTIC</p>
         </div>
         <div>
-            <img src="img/juanCamiloFoto.jpeg" alt="Foto de Juan Camilo" class="foto">
+            <img src="images/fotos_team/juanCamiloFoto.jpeg" alt="Foto de Juan Camilo" class="foto">
             <hr>
             <p>Nombre: Juan Camilo Gómez Álvarez</p>
             <p>Edad: 28 años</p>
@@ -151,7 +151,7 @@
             <p>En la actualidad soy estudiante en la UTP en el programa de formación MinTIC.</p>
         </div>   
         <div>
-            <img src="img/davidGalvezFoto.jpeg" alt="Foto de David Galvez" class="foto">
+            <img src="images/fotos_team/davidGalvezFoto.jpeg" alt="Foto de David Galvez" class="foto">
             <hr>
             <p>Nombre: David Gálvez Puerta</p>
             <p>Edad: 33 años</p>
@@ -159,11 +159,11 @@
             <p>Realicé un tecnólogo en sistemas en la Universidad Tecnológica de Antioquia, y actualmente soy estudiante de la UTP, en el programa de formacíon MinTIC</p>
         </div>    
         <div>
-            <img src="img/sergioSilvaFoto.jpg" alt="Foto de Sergio Silva" class="foto">
+            <img src="images/fotos_team/sergioSilvaFoto.jpg" alt="Foto de Sergio Silva" class="foto">
             <hr>
             <p>Nombre: Sergio Duvand Silva Merchán</p>
             <p>Edad: 16 años</p>
-            <p>En mis ratos libres me gusta estudiar y repasar temas de programación, hacer ejercicio, y ocasinalme jugar video juegos.</p>
+            <p>En tiempo libre me gusta estudiar y repasar temas de programación, hacer ejercicio, y ocasinalme jugar video juegos.</p>
             <p>Realice un técnico en manipulación de alimentos, y también un curso de programación básica en Platzi, actualmente estoy estudiando un diplomado en inglés y soy estudiante en la UTP gracias al programa de formación MinTIC.</p>
         </div>
     </article>
