--- a/index.html
+++ b/index.html
@@ -12,38 +12,43 @@
         <h1></h1>
         
     </header>
-     <article style="margin-bottom: 20px;" id="services">
+     <article class="services" style="margin-bottom: 20px;" id="services">
 
         <div class="divC1" style="float:left">
             <h2  >MENÚ </h2>
             <P>Disfruta de nuestras deliciosas preparaciones, todas basadas en la gastronimia Colombiana </P>
             <p>Deliciosos platos tipicos de nuestra cinco regiones naturales</p>
-            <h3>Region Andina</h3>
-            <p>Bandeja Paisa</p>
-            <img  class="imagen" src="images/rigion andina/bandeja-paisa.jpg" alt="Bandeja paisa">
-            <p>Changua</p>
-            <img  class="imagen" src="images/rigion andina/changua.jpg" alt="Changua" width="70%" height="70%">
-            <h3>Region Pacifica</h3>
-            <p>Arroz Atollado con Carne Ahumada</p>
-            <img  class="imagen" src="images/region del pacifico/arroz-atollado-de-carne-ahumada-1603.jpg" alt="Arroz atollado y carne Ahumada">
-            <p>Bocachico en Leche de Coco</p>
-            <img  class="imagen" src="images/region del pacifico/bocachico en leche de coco.jpg" alt="Bocachico en leche de coco">
-            <h3>Region Caribe</h3>
-            <p>Sancocho Costeño</p>
-            <img  class="imagen" src="images/region del caribe/sancocho-costeño.jpg" alt="Sancocho Costeño">
-            <p>Tilapia Frita y Arroz de Coco</p>
-            <img  class="imagen" src="images/region del caribe/arroz-de-coco-y-tilapia-frita.jpg" alt="Tilapia Frita y arroz de coco">
-            <h3>Region Orinoquia</h3>
-            <p>Arroz Llanero</p>
-            <img  class="imagen" src="images/region orinoquia/arroz-llanero.jpg" alt="Arroz Llanero">
-            <p>Carne a la Llanera</p>
-            <img  class="imagen" src="images/region orinoquia/CarneLlanera.jpg" alt="carne a la Llanera">
-            <H3>Region Amazonica</H3>
-            <p>Gamintana Rellena</p>
-            <img class="imagen" src="images/region del amazonas/gamintana-rellena.jpg" alt="Gamintana Rellena">
-            <p>Gamintana Asada</p>
-            <img class="imagen" src="images/region del amazonas/gamitanasada.jpg" alt="Gamintana Asada">            
             
+            <h3>Region Andina</h3> 
+            <img  class="imagen" src="images/rigion andina/bandeja-paisa.jpg" alt="Bandeja paisa">
+            <p>Bandeja Paisa</p>
+            <img  class="imagen" src="images/rigion andina/changua.jpg" alt="Changua" width="70%" height="70%">
+            <p>Changua</p>
+            <hr style="height: 5px;">
+            <h3>Region Pacifica</h3>
+            <img  class="imagen" src="images/region del pacifico/arroz-atollado-de-carne-ahumada-1603.jpg" alt="Arroz atollado y carne Ahumada">
+            <p>Arroz Atollado con Carne Ahumada</p>
+            <img  class="imagen" src="images/region del pacifico/bocachico en leche de coco.jpg" alt="Bocachico en leche de coco">
+            <p>Bocachico en Leche de Coco</p>
+            <hr style="height: 5px;">
+            <h3>Region Caribe</h3>
+            <img  class="imagen" src="images/region del caribe/sancocho-costeño.jpg" alt="Sancocho Costeño">
+            <p>Sancocho Costeño</p>
+            <img  class="imagen" src="images/region del caribe/arroz-de-coco-y-tilapia-frita.jpg" alt="Tilapia Frita y arroz de coco">
+            <p>Tilapia Frita y Arroz de Coco</p>
+            <hr style="height: 5px;">
+            <h3>Region Orinoquia</h3>
+            <img  class="imagen" src="images/region orinoquia/arroz-llanero.jpg" alt="Arroz Llanero">
+            <p>Arroz Llanero</p>
+            <img  class="imagen" src="images/region orinoquia/CarneLlanera.jpg" alt="carne a la Llanera">
+            <p>Carne a la Llanera</p>
+            <hr style="height: 5px;">
+            <H3>Region Amazonica</H3>
+            <img class="imagen" src="images/region del amazonas/gamintana-rellena.jpg" alt="Gamintana Rellena">
+            <p>Gamintana Rellena</p>
+            <img class="imagen" src="images/region del amazonas/gamitanasada.jpg" alt="Gamintana Asada">            
+            <p>Gamintana Asada</p>
+
         </div>
         <div class="divContenedor" style="float:right">
         <div class="divC2">
