--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
 </head>
 <body >
     <header>
-        <h1></h1>
-        
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#" style="color: white;">
+                <img src="images/logos/logo1.png" alt="" width="80" height="60"> SmartDEV
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="nav justify-content-end collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav" >
+                  <a class="nav-link" href="#" style="color: white;">Menú</a>
+                  <a class="nav-link" href="#" style="color: white;">Carrito de compras</a>
+                  <a class="nav-link" href="#" style="color: white;">Iniciar sesión</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+          <img src="images/rigion andina/bandeja-paisa.jpg" alt="Imagen header" class="imagenHeader">
     </header>
     <article class="services" style="margin-bottom: 20px;" id="services">
 
