--- a/noticias.html
+++ b/noticias.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS3/estilo.css" type="text/css">
+    <link rel="stylesheet" href="CSS3/config.css" type="text/css">
     <link rel="icon" href="IMG/favicon.png" type="image/x-icon">
 
     <title>Colombian Food</title>
@@ -22,8 +22,8 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
               <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                  <img src="IMG/logo.png" href="index.html" alt="" width="40" height="40" class="d-inline-block align-text-top">
+                <a class="navbar-brand" href="index.html">
+                  <img src="IMG/logo.png" alt="" width="40" height="40" class="d-inline-block align-text-top">
                   Colombian Food
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
                   <div class="navbar-nav">
                     <a class="nav-link fas fa-home" href="index.html"></a>
                     <a href="" class="nav-link fas fa-shopping-cart"></a>
-                    <a class="nav-link fas fa-user" href="form.html"></a>
+                    <a href="" class="nav-link fas fa-user"></a>
                   </div>
                 </div>
               </div>
@@ -41,41 +41,26 @@
           </div> 
         
       </header>
-
-      <!--MENSAJE DE BIENVENIDA-->
-        <div class="texto-bienvenido">
-          <h1>BIENVENIDO A COLOMBIA</h1>
-          <h2>ANÍMATE Y COMPARTE TU RECETA</h2>
-          <a href="form.html"><button type="button" class="btn btn-warning">REGISTRO DE RECETAS</button></a>
-        </div>  
     </section>
-    <section class="informacion-principal">
-          
-    </section>
+  
+    <!--GRID DE BOOTSTRAP -->
     <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <a href="servicio.html"><i class="fas fa-concierge-bell"></i></a>
-        <p class="texto">SERVICIO</p>
-      </div>
-      <div class="col-md-4">
-        <a href="noticias.html"><i class="far fa-newspaper"></i></a>
-        <p class="texto">NOTICIAS</p>
-      </div>
-      <div class="col-md-4">
-        <a href="programadores.html"><i class="fas fa-users-cog"></i></a>
-        <p class="texto">PROGRAMADORES</p>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="IMG/cocina.jpg" alt="..." class="img-thumbnail">
+        </div>
+        <div class="col-md-6">
+          <img src="IMG/cocina2.jpg" alt="..." class="img-thumbnail">
+        </div>
       </div>
     </div>
-  </div>
-  
-    <!--FOOTER -->
+    <!--AQUÍ COMIENZA EL FOOTER-->
     <section class="footer">
       <div class="container">
         <p>2021 © TODOS LOS DERECHOS RESERVADOS A SMARTDEV</p>
       </div>
     </section>
-  
+
     <script src="https://kit.fontawesome.com/8fc18d5b11.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   </body>
