commit por Jenny

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             <hr>
             <p>Nombre: Jenny Johanna Forero Ávila</p>
             <p>Edad: 31 años</p>
-            <p>Las actividades que me gustan realizar en mi tiempo libre es modificar prendas, dieñar publicidad y tambíen jugar video juegos.</p>
-            <p>Tengo conocimientos básicos en Big data, blockchain en un nivel intermedio,marketing internacional, inteligencia emocional y en el momento estoy estudiando en la UTP con el programa MinTIC</p>
+            <p>Las actividades que me gustan realizar en mi tiempo libre es customizar prendas, dieñar publicidad y tambíen jugar video juegos.</p>
+            <p>Tengo conocimientos básicos en Big data, blockchain,marketing internacional, inteligencia emocional y en el momento estoy estudiando en la UTP con el programa de formación MinTIC</p>
         </div>
         <div>
             <img src="img/juanCamiloFoto.jpeg" alt="Foto de Juan Camilo" class="foto">
